# GameClient

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_mac.sh  build_run_mac.sh  fix_metal_lighting.patch  patch_logs.sh  test_multimap  test_multimap.cpp
.github/workflows/: build-toolchain.yml  ci.yml
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: ArchiveFileSystem.h  AsciiString.h  Debug.h  FileSystem.h  GameCommon.h  GameDefines.h  MiniDumper.h  UnicodeString.h  crc.h
Core/GameEngine/Include/Common/Diagnostic/: SimulationMathCrc.h
Core/GameEngine/Include/Common/System/: NativeFileSystem.h
Core/GameEngine/Include/GameClient/: GameWindow.h  Mouse.h  View.h  WindowVideoManager.h
Core/GameEngine/Include/GameLogic/: AIPathfind.h
Core/GameEngine/Include/GameNetwork/: GameInfo.h  LANAPI.h  NetPacketStructs.h
Core/GameEngine/Include/GameNetwork/GameSpy/: LobbyUtils.h
Core/GameEngine/Include/GameNetwork/WOLBrowser/: FEBDispatch.h  WebBrowser.h
Core/GameEngine/Source/Common/: CRCDebug.cpp  FrameRateLimit.cpp  RandomValue.cpp  ReplaySimulation.cpp  UserPreferences.cpp  WorkerProcess.cpp
Core/GameEngine/Source/Common/Audio/: AudioEventRTS.cpp
Core/GameEngine/Source/Common/Diagnostic/: SimulationMathCrc.cpp
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/GameClient/: ClientInstance.cpp  GameText.cpp  GlobalLanguage.cpp  LanguageFilter.cpp  MapUtil.cpp  View.cpp
Core/GameEngine/Source/GameNetwork/: ConnectionManager.cpp  DownloadManager.cpp  FileTransfer.cpp  FirewallHelper.cpp  GameInfo.cpp  IPEnumeration.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  NAT.cpp  NetCommandMsg.cpp  NetPacket.cpp  NetPacketStructs.cpp  Network.cpp  NetworkUtil.cpp  udp.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/Libraries/: CMakeLists.txt
Core/Libraries/Include/Lib/: BaseType.h  BaseTypeCore.h  trig.h
Core/Libraries/Source/WWVegas/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  htree.cpp  missingtexture.cpp  render2dsentence.cpp  render2dsentence.h  seglinerenderer.cpp  static_sort_list.cpp  surfaceclass.cpp  surfaceclass.h  texture.cpp  textureloader.cpp
Core/Libraries/Source/WWVegas/WWDebug/: wwprofile.h
Core/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  DbgHelpLoader.cpp  DbgHelpLoader.h  Except.cpp  TARGA.h  bittype.h  cpudetect.cpp  mempool.h  multilist.cpp  multilist.h  refcount.h  thread.cpp
Core/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt  pot.cpp  wwmath.h
Core/Libraries/Source/WWVegas/WWMath/fdlibm/: fdlibm.h  fdlibm_det.c  fdlibm_det.h  k_tan.c
Core/Libraries/Source/WWVegas/WWSaveLoad/: persistfactory.h
Core/Libraries/Source/debug/: debug_debug.cpp
Core/Libraries/Source/profile/: profile.cpp  profile_funclevel.h
Core/Tools/MapCacheBuilder/Source/: WinMain.cpp
Core/Tools/matchbot/wlib/: threadfac.h
Core/Tools/wolSetup/: wolInit.cpp
Dependencies/Utility/Utility/: compat.h  d3d8_compat.h  string_compat.h  thread_compat.h  wchar_compat.h  win32types_compat.h
Generals/Code/Main/: WinMain.cpp  WinMain.h
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  animobj.cpp  assetmgr.cpp  camera.cpp  ddsfile.h  dx8caps.cpp  dx8indexbuffer.cpp  dx8renderer.cpp  dx8vertexbuffer.cpp  dx8wrapper.cpp  dx8wrapper.h  hlod.cpp  lightenvironment.cpp  part_buf.cpp  part_emt.cpp  render2d.cpp  texturefilter.cpp  textureloader.cpp  ww3d.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp  WinMain.h  app.manifest
Maps/: MapCacheGO.ini
Platform/MacOS/: .gitignore  CMakeLists.txt  Info.plist.in
Platform/MacOS/EACPlugin/: CMakeLists.txt  eac_plugin.cpp
Platform/MacOS/Include/: atlbase.h  atlcom.h  comutil.h  d3d8.h  d3d8_com.h  d3d8_interfaces.h  d3d8_structs.h  d3d8caps.h  d3d8types.h  d3dx8.h  d3dx8core.h  d3dx8math.h  d3dx8tex.h  dbghelp.h  ddraw.h  dinput.h  direct.h  imagehlp.h  io.h  malloc.h  metal_prefix.h  mmsystem.h  mss.h  oleauto.h  osdep.h  process.h  windows.h  wininet.h  winsock.h
Platform/MacOS/Include/EABrowserDispatch/: BrowserDispatch.h
Platform/MacOS/Launcher/: assemble_distribution.sh  build_dmg.sh  run_launcher.sh
Platform/MacOS/Launcher/Sources/: AboutWindow.swift  LauncherApp.swift  MainView.swift  SteamCMDManager.swift  UpdateChecker.swift
Platform/MacOS/Launcher/www/: instructions.html
Platform/MacOS/Source/: GeneralsOnlineStubs.cpp
Platform/MacOS/Source/Audio/: AVAudioBridge.h  AVAudioBridge.mm  MacOSAudioManager.cpp  MacOSAudioManager.h
Platform/MacOS/Source/Input/: MacOSGameClientFactory.cpp  MacOSKeyboard.h  MacOSKeyboard.mm  MacOSMouse.h  MacOSMouse.mm
Platform/MacOS/Source/Main/: MacOSGameEngine.h  MacOSGameEngine.mm  MacOSMain.mm
Platform/MacOS/Source/Metal/: MacOSDebugLog.h  MacOSDisplayManager.h  MacOSDisplayManager.mm  MacOSShaders.metal  MetalBridgeMappings.h  MetalCubeTexture8.h  MetalCubeTexture8.mm  MetalDevice8.h  MetalDevice8.mm  MetalDevice8_state.h  MetalIndexBuffer8.h  MetalIndexBuffer8.mm  MetalInterface8.h  MetalInterface8.mm  MetalSurface8.h  MetalSurface8.mm  MetalTexture8.h  MetalTexture8.mm  MetalVertexBuffer8.h  MetalVertexBuffer8.mm  dx8wrapper_metal.mm
Platform/MacOS/Source/System/: MacOSLocalFileSystem.h  MacOSLocalFileSystem.mm
Platform/MacOS/Source/Utils/: MacDebug.h
Platform/MacOS/docs/: BUILD_SYSTEM.md  DEVELOPMENT.md  FILE_SYSTEM.md  IMPLEMENTATION_STATUS.md  README.md  RENDERING.md  SETUP.md  STUBS_AUDIT.md
Platform/MacOS/docs/legacy/: FILE_SYSTEM.md  RENDERING.md
Platform/MacOS/docs/reference/: README.md
Platform/MacOS/docs/reference/dx8_metal_specs/: CUBEMAPS_AND_CLIPPLANES.md  README.md
cmake/: config-build.cmake  curl.cmake  fdlibm.cmake  gamemath.cmake  gns.cmake
docs/: DETERMINISTIC_MATH.md  FAQ.md  MACOS_INSTALL.md  MACOS_STATUS.md
tmp/: test_whitespace.txt
(+435 files in other folders)
